exynos990-common: build lineage livedisplay HAL
* Also set permissions for mdnie lux node in init.exynos990.rc

Change-Id: I11dfc1df9eb4bd30c311d7b65ae6b4d1c59f54cb

--- a/config/init/init.exynos990.rc
+++ b/config/init/init.exynos990.rc
@@ -1071,6 +1071,9 @@ on fs
     chown system system /sys/class/mdnie/mdnie/bypass
     chown system system /sys/class/mdnie/mdnie/mdnie_ldu
     chown system system /sys/class/mdnie/mdnie/hdr
+    # ISunlightEnhancement
+    chown system system /sys/class/mdnie/mdnie/lux
+    chmod 0644 /sys/class/mdnie/mdnie/lux
 
 # GPIO
     chown root system /sys/class/secgpio_check/secgpio_check_all/check_requested_gpio
