--- a/kernel/x1s.cfg
+++ b/kernel/x1s.cfg
@@ -1,7 +1,19 @@
-exynos990-x1slte_eur_open_00.dtbo
-  custom0=0x00000000
-  custom1=0x14000000
+exynos990-x1s_eur_open_05.dtbo
+  custom0=0x00000005
+  custom1=0x00000005
 
-exynos990-x1slte_eur_open_21.dtbo
-  custom0=0x15000000
-  custom1=0xff000000
+exynos990-x1s_eur_open_16.dtbo
+  custom0=0x00000010
+  custom1=0x00000010
+
+exynos990-x1s_eur_open_17.dtbo
+  custom0=0x00000011
+  custom1=0x00000012
+
+exynos990-x1s_eur_open_19.dtbo
+  custom0=0x00000013
+  custom1=0x00000014
+
+exynos990-x1s_eur_open_21.dtbo
+  custom0=0x00000015
+  custom1=0x000000ff
