--- a/configs/init/init.exynos990.root.rc
+++ b/configs/init/init.exynos990.root.rc
@@ -104,7 +104,7 @@ on post-fs-data
     
     chown system radio /efs
     chmod 0771 /efs
-    restorecon /efs
+    restorecon_recursive /efs
 
     chown system system /carrier
     chmod 0771 /carrier
