--- a/configs/init/init.exynos990.rc
+++ b/configs/init/init.exynos990.rc
@@ -947,7 +947,7 @@ on fs
     mount_all /vendor/etc/fstab.${ro.hardware} --early
 
     wait /dev/block/platform/13100000.ufs/by-name/sec_efs
-    mount ext4 /dev/block/platform/13100000.ufs/by-name/sec_efs /efs nosuid nodev noatime noauto_da_alloc,discard,journal_checksum,data=ordered,errors=panic    
+    mount ext4 /dev/block/platform/13100000.ufs/by-name/sec_efs /efs nosuid nodev noatime noauto_da_alloc,discard,journal_checksum,data=ordered,errors=panic,no_sehash_xattr 
     setprop ro.crypto.fde_algorithm AES-256-XTS-DISK
 
     wait /dev/block/platform/13100000.ufs/by-name/spu
